# avp-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/avp/: __init__.py  client.py  errors.py  types.py
src/avp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/avp/backends/: __init__.py  base.py  file.py  keychain.py  memory.py
src/avp_sdk.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_backends.py  test_client.py  test_keychain_backend.py  test_types.py
